# potatogame_group3

./: .gitignore  CMakeLists.txt  README.md  build-macos.sh  build-modular.bat
docs/: DEVELOPMENT_README.md  architecture_refactoring.md  brotato_game_project.md  game_features.md  original_game_project.md  refactoring_changes.md  refactoring_summary.md  technical_architecture.md
old_src/: Game.cpp  ModularMain.cpp  Weapon.cpp
original_game/: DEVELOPMENT_PLAN_03.MD  DEVELOPMENT_PLAN_03_EN.MD  GAME_DETAILED_DESCRIPTION.MD
src/: BossEnemy.cpp  BossEnemy.h  Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  Menu.cpp  Menu.h  Shop.cpp  Shop.h  SnakeBoss.cpp  SnakeBoss.h  Weapon.h
src/Content/: CMakeLists.txt
src/Content/Weapons/: WeaponFactory.cpp  WeaponFactory.h
src/Core/: CMakeLists.txt
src/Core/Engine/: Application.cpp  Application.h  ServiceLocator.h
src/Core/Events/: EventManager.cpp  EventManager.h  GameEvents.h
src/Core/Math/: Vector2.cpp  Vector2.h
src/Gameplay/: CMakeLists.txt
src/Gameplay/Components/: Components.h
src/Gameplay/Entities/: EntityManager.cpp  EntityManager.h
src/Gameplay/Systems/: CollisionSystem.cpp  CollisionSystem.h  EnemyAISystem.cpp  EnemyAISystem.h  EnemySpawnSystem.cpp  EnemySpawnSystem.h  MovementSystem.cpp  MovementSystem.h  PickupSystem.cpp  PickupSystem.h  ProjectileSystem.cpp  ProjectileSystem.h  RenderSystem.cpp  RenderSystem.h  ShootingSystem.cpp  ShootingSystem.h  ShopSystem.cpp  ShopSystem.h  UISystem.cpp  UISystem.h  WaveSystem.cpp  WaveSystem.h
src/Gameplay/World/: GameplayManager.cpp  GameplayManager.h
src/Input/: CMakeLists.txt
src/Input/InputSystem/: InputManager.cpp  InputManager.h
src/Rendering/: CMakeLists.txt
src/Rendering/Renderer/: IRenderer.h  SDL2Renderer.cpp  SDL2Renderer.h
